--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,9 +11,14 @@ on:
 
 jobs:
   build:
-
+    name: "Build and Test"
     runs-on: ubuntu-latest
-
+    permissions:
+    # Required to allow actions/checkout to clone the repository onto the runner
+      contents: read
+    # Required to allow the vitest coverage action to write a comment into the pull request
+      pull-requests: write
+      
     strategy:
       matrix:
         node-version: [16.x, 18.x]
